--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <p>
 bonjour Kahina voila j'ai réussi à modifier ton fichier 
 </p>
+  <p>contente pour toi Ines </p>
   
 <p><font size=16>
 x(t)=t<sup> (3+4<b>i</b>)(2<b>i</b><sup>2</sup>+<b>i</b><i>Pi</i>/4)</sup>
